; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pwc/extr_pwc-ctrl.c_pwc_get_fps.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pwc/extr_pwc-ctrl.c_pwc_get_fps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwc_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pwc_get_fps(%struct.pwc_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.pwc_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pwc_device* %0, %struct.pwc_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.pwc_device*, %struct.pwc_device** %4, align 8
  %9 = getelementptr inbounds %struct.pwc_device, %struct.pwc_device* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @DEVICE_USE_CODEC1(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %3
  %14 = load %struct.pwc_device*, %struct.pwc_device** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @pwc_get_fps_Nala(%struct.pwc_device* %14, i32 %15, i32 %16)
  store i32 %17, i32* %7, align 4
  br label %35

18:                                               ; preds = %3
  %19 = load %struct.pwc_device*, %struct.pwc_device** %4, align 8
  %20 = getelementptr inbounds %struct.pwc_device, %struct.pwc_device* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @DEVICE_USE_CODEC3(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %18
  %25 = load %struct.pwc_device*, %struct.pwc_device** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @pwc_get_fps_Kiara(%struct.pwc_device* %25, i32 %26, i32 %27)
  store i32 %28, i32* %7, align 4
  br label %34

29:                                               ; preds = %18
  %30 = load %struct.pwc_device*, %struct.pwc_device** %4, align 8
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @pwc_get_fps_Timon(%struct.pwc_device* %30, i32 %31, i32 %32)
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %29, %24
  br label %35

35:                                               ; preds = %34, %13
  %36 = load i32, i32* %7, align 4
  ret i32 %36
}

declare dso_local i64 @DEVICE_USE_CODEC1(i32) #1

declare dso_local i32 @pwc_get_fps_Nala(%struct.pwc_device*, i32, i32) #1

declare dso_local i64 @DEVICE_USE_CODEC3(i32) #1

declare dso_local i32 @pwc_get_fps_Kiara(%struct.pwc_device*, i32, i32) #1

declare dso_local i32 @pwc_get_fps_Timon(%struct.pwc_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
